Updated docs for 1.3.1

--- a/index.html
+++ b/index.html
@@ -633,6 +633,13 @@ $result = __::chain($numbers)->select(function($n) { return $n < 5; })
 <pre>__(array(1, 2, 3))->value(); // array(1, 2, 3)</pre>
 
 <h2 id="changelog">Change Log</h2>
+<p>Underscore.php version numbers have corresponding Underscore.js releases</p>
+<h3>1.3.1 &mdash; Jan. 31, 2012</h3>
+<ul>
+  <li>Added <code>has()</code></li>
+  <li>Added <code>collect()</code> as an alias to <code>map()</code></li>
+</ul>  
+
 <h3>1.2.4 &mdash; Jan. 8, 2012</h3>
 <p>Jumping from 1.0 to 1.2.4 to match Underscore.js.</p>
 <ul>
